Let's fix the placement of the close button on the top so that it doesn't overlap the text.

--- a/app/assets/stylesheets/ui-customizations.css.scss
+++ b/app/assets/stylesheets/ui-customizations.css.scss
@@ -854,7 +854,7 @@ div.dataTables_filter {
 #copy, #info {
 
   .modal-header {
-    height: 30px;
+    height: 50px;
   }
 
   .modal-dialog {
